--- a/css-exercises/flex/05-flex-modal/style.css
+++ b/css-exercises/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
@@ -20,6 +21,12 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display:flex;
+  
+  padding:20px;
+  gap:10px;
+  
+  
 }
 
 .icon {
@@ -33,6 +40,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  
+  flex-shrink:0;
+  
+  
 }
 
 .close-button {
@@ -48,6 +60,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
@@ -66,4 +79,18 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+
+.header {
+  font-weight:bold;
+  font-size:large;
+  margin-bottom:10px;
+  display:flex;
+}
+
+.but {
+  display:flex;
+  gap:4px;
+  margin-top:10px;
 }
