--- a/css-exercises/flex/06-flex-layout/style.css
+++ b/css-exercises/flex/06-flex-layout/style.css
@@ -5,7 +5,41 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;
+  flex-direction:column;
 }
+
+.content {
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  flex:1;
+}
+
+ul {
+  list-style:none;
+  margin:0;
+  padding:10px;
+  display:flex;
+  gap:16px;
+}
+
+.header,
+.footer {
+  display:flex;
+  justify-content:space-between;
+}
+
+a {
+  text-decoration:none;
+  color:rgb(78, 74, 74);
+}
+
+.footer {
+  background-color:#eee;
+}
+
 
 img {
   width: 600px;
@@ -16,6 +50,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding:8px 16px;
 }
 
 input {
