--- a/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-exercises/flex/07-flex-layout-2/style.css
@@ -2,24 +2,78 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction:column;
+}
+
+.box {
+  display:flex;
+  flex-wrap:wrap;
+  padding:32px;
+
+}
+
+ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+a {
+  text-decoration:none;
+  color:white;
+  font-size:24px;
+  
+}
+
+.container {
+  display:flex;
+  flex:1;
+  
+}
+
+div > .card {
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
+  
+  
+
+
+} 
+
+li {
+  margin-bottom:16px;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size:32px;
+  font-weight:bolder;
+  display:flex;
+  align-items:center;
+  padding: 0 16px;
+
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink:0;
+  
+  margin:0;
 }
 
 .card {
